GNOME Bugzilla – Bug 710451
yadif: OSX linking fails because of unresolved symbols: "pb_1" and "pw_1" unreferenced
Last modified: 2013-11-01 09:42:08 UTC
Building gstreamer-1-1-4 on my own (manually == without CERBERO) I managed to get everything compiled until "gst-plugins-bad" : for which LINK is broken at the end : ... CCLD libgstyadif.la Undefined symbols for architecture x86_64: "pb_1", referenced from: _filter_line_x86_64 in libgstyadif_la-yadif.o "pw_1", referenced from: _filter_line_x86_64 in libgstyadif_la-yadif.o ld: symbol(s) not found for architecture x86_64 clang: error: linker command failed with exit code 1 (use -v to see invocation) It happens not only as well with more recent version 1.2.0 of gst-plugins-bad. More details here : http://gstreamer-devel.966125.n4.nabble.com/gst-plugins-bad-1-1-4-Mac-LINK-failure-gt-quot-pb-1-quot-and-quot-pw-1-quot-unreferenced-td4662679.html
For OSX/iOS these symbols probably have to be prefixed with an underscore. I'll take a look at that tomorrow if nobody is faster.
commit 010fd8a471bc60ea1490d43bc6d32d5dcc77c18d Author: Sebastian Dröge <sebastian@centricular.com> Date: Fri Nov 1 10:41:16 2013 +0100 yadif: Fix compiler warning caused by specifying const twice yadif.c:49:24: warning: duplicate 'const' declaration specifier [-Wduplicate-decl-specifier] DECLARE_ASM_CONST (16, const xmm_reg, pb_1) = { ^ yadif.c:33:50: note: expanded from macro 'DECLARE_ASM_CONST' #define DECLARE_ASM_CONST(n,t,v) static const t __attribute__((used)) __attribute__ ((aligned (n))) v ^ yadif.c:52:24: warning: duplicate 'const' declaration specifier [-Wduplicate-decl-specifier] DECLARE_ASM_CONST (16, const xmm_reg, pw_1) = { ^ yadif.c:33:50: note: expanded from macro 'DECLARE_ASM_CONST' #define DECLARE_ASM_CONST(n,t,v) static const t __attribute__((used)) __attribute__ ((aligned (n))) commit 411cf48db7a2eeaf3c22ef8d47ddc1781e7ede6d Author: Sebastian Dröge <sebastian@centricular.com> Date: Fri Nov 1 10:40:06 2013 +0100 yadif: Fix build with XCode https://bugzilla.gnome.org/show_bug.cgi?id=710451