yadif: Fix build with XCode

https://bugzilla.gnome.org/show_bug.cgi?id=710451